samples/_failures_safe/1761180621_c91735_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d4f962c.c: In function ‘main’:
./samples/SAFE/__tmp_5d4f962c.c:148:16: error: missing terminating " character
  148 |         printf("Error processing text
      |                ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5d4f962c.c:148:9: error: expected expression at end of input
  148 |         printf("Error processing text
      |         ^~~~~~
./samples/SAFE/__tmp_5d4f962c.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5d4f962c.c:148:9: error: expected declaration or statement at end of input
